k8s/base/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: restaurantyacrfatemeh.azurecr.io/restauranty-auth:2ed3b0a
          imagePullPolicy: Always
          ports:
            - containerPort: 3001

          livenessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  selector:
    app: auth
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
