k8s/base/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client

spec:
  replicas: 1

  selector:
    matchLabels:
      app: client

  template:
    metadata:
      labels:
        app: client

    spec:
      containers:
        - name: client

          image: fatemehparmoo/restauranty-client

          imagePullPolicy: Always

          ports:
            - containerPort: 80

          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: client-service

spec:
  selector:
    app: client

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
