k8s/base/discounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts-deployment
  labels:
    app: discounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
        - name: discounts
          image: fatemehparmoo/restauranty-discounts:2ed3b0a
          imagePullPolicy: Always
          ports:
            - containerPort: 3002

          livenessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: discounts-service
spec:
  selector:
    app: discounts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
