k8s/base/items-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-deployment
  labels:
    app: items
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
        - name: items
          image: restaurantyacrfatemeh.azurecr.io/restauranty-items:2ed3b0a
          imagePullPolicy: Always
          ports:
            - containerPort: 3003

          livenessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: items-service
  labels:
    app: items
spec:
  selector:
    app: items
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3003
  type: ClusterIP
